# adder

./: .gitignore  CMakeLists.txt  README.md
doc/: changelog.txt  dd.md
include/adder/: Snake.hxx  State.hxx  StateMachine.hxx  types.hxx
include/adder/states/: GameOverState.hxx  GameplayState.hxx  InitState.hxx  TitlescreenState.hxx
src/: Snake.cxx  StateMachine.cxx  config.h.in  main.cxx  types.cxx
src/states/: GameOverState.cxx  GameplayState.cxx  InitState.cxx  TitlescreenState.cxx
